# RAGops

./: .env.example  .gitignore  Makefile  README.md  Untitled-1.py  docker-compose.yaml  pyproject.toml  requirements.txt  run_backend.py  streamlit_app.py  test_ollama_query.py
.github/: CODEOWNERS
.github/workflows/: ci.yaml  security.yaml
docs/: README.md  project_report.md
docs/api/: openapi.yaml
docs/architecture/: overview.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: providers.tsx
frontend/src/hooks/: use-cost.ts  use-projects.ts
frontend/src/lib/: api-client.ts  store.ts  utils.ts
infra/: prometheus.yml
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_rag_tables.py  003_eval_tables.py
services/auth/: Dockerfile
services/auth/app/: main.py  pyproject.toml
services/auth/app/api/v1/: __init__.py  auth.py  users.py
services/auth/app/core/: config.py  middleware.py  security.py
services/auth/app/domain/: entities.py  repositories.py
services/auth/app/infrastructure/: database.py  models.py  pg_user_repo.py
services/auth/app/schemas/: auth.py
services/auth/app/services/: auth_service.py
services/auth/app/tests/: test_auth_service.py
services/embedding/: Dockerfile
services/embedding/app/: main.py
services/evaluation/app/: main.py
services/monitoring/app/: cost_tracker.py  metrics.py
services/rag-engine/app/: main.py  state.py
services/shared/ragops_core/: __init__.py  events.py  exceptions.py  telemetry.py
(+60 files in other folders)
